Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL)
-
None
Description
In cases of a faulty master or an incorrect binlog event producer, that slave is working with,
sends an incomplete group of events slave must react with an error to not to log
into the relay-log any new events that do not belong to the incomplete group.
For example when the slave input is like
Gtid_event g1;
|
--error ER_INCOMPLETE_REPLICATION_EVENT_GROUP
|
Gtid_event g2;
|
the slave must error out at g2 receiving.