MDEV-27697 testing; loss of Xid event simulation.

/* slave */ set @@global.debug_dbug="d,slave_discard_xid_random";
/* will skip on everage every tenth Xid_log_event */